--- a/ProAgil-App/src/app/eventos/eventos.component.html
+++ b/ProAgil-App/src/app/eventos/eventos.component.html
@@ -1,11 +1,40 @@
-<p>
-  eventos works!
-</p>
+<form  class =  "form-inline">
+  <div class="form-group mb2">
+    <input type="text" class="form-control mr-2" placeholder="buscar">
+  <button class="btn btn-outline-sucess">buscar</button>  
+  </div>
+    
+</form>
 
-
-<div *ngFor="let evento of eventos" >
-  Tema : {{evento.tema}}
-  <br>
-  Local : {{evento.local}}
-  <hr/>
-</div>
+<table class="table table-striped">
+  <thead class="thead-dark">
+    <tr>
+    <th>#</th>
+    <th>Tema</th>
+    <th>Local</th>
+    <th>Data</th>
+    <th>Qtd de Pessoas</th>
+    <th>Lote</th>
+    <th>Opções</th>
+  </tr>
+  </thead>
+  <tbody *ngIf="eventos && eventos.length">
+    <tr *ngFor="let evento of eventos">
+      <td>{{evento.eventoId}}</td>
+      <td>{{evento.tema}}</td>
+      <td>{{evento.local}}</td>
+      <td>{{evento.dataEvento}}</td>
+      <td>{{evento.qtdPessoas}}</td>
+      <td>{{evento.lote}}</td>
+      <td>
+        <button class="btn btn-success"></button>
+        <button class="btn btn-danger"></button>
+      </td>
+    </tr>
+  </tbody>
+  <tfoot  *ngIf="!eventos.length" >
+    <tr colspan = "7" class="text-center" >
+      <td><h4>Nenhum Evento encontrado</h4></td>
+    </tr>
+  </tfoot>
+</table>
