--- a/ProAgil-App/src/app/eventos/eventos.component.html
+++ b/ProAgil-App/src/app/eventos/eventos.component.html
@@ -1,31 +1,44 @@
-<form  class =  "form-inline">
+<div  class =  "form-inline">
   <div class="form-group mb2">
-    <input type="text" class="form-control mr-2" placeholder="buscar">
-  <button class="btn btn-outline-sucess">buscar</button>  
+    <label class="mr-2">Filtro .: </label> 
+    <input type="text" class="form-control mr-2" placeholder="buscar"
+    [(ngModel)]="filtroLista">
+  
   </div>
     
-</form>
-
+</div>
+<h3>Filtro: {{filtroLista}}</h3>
 <table class="table table-striped">
-  <thead class="thead-dark">
+  <thead class="thead-light">
     <tr>
+    
+       <th>
+        <button class="btn btn-primary" (click)="alternarImagem()">
+          Mostrar Imagem
+        </button>
+       </th>
     <th>#</th>
     <th>Tema</th>
     <th>Local</th>
     <th>Data</th>
     <th>Qtd de Pessoas</th>
-    <th>Lote</th>
+    <th>Lote</th> 
     <th>Opções</th>
   </tr>
   </thead>
   <tbody *ngIf="eventos && eventos.length">
-    <tr *ngFor="let evento of eventos">
+    <tr *ngFor="let evento of eventosFiltrados">
+      <td> <img 
+                *ngIf="mostrarImagem"
+                src="http://localhost:5000/img/{{evento.imagemURL}}" 
+                [style.width.px] = "imagemLargura" 
+                [style.margin.px] = "imagemTamanho" > </td>
       <td>{{evento.eventoId}}</td>
       <td>{{evento.tema}}</td>
       <td>{{evento.local}}</td>
       <td>{{evento.dataEvento}}</td>
       <td>{{evento.qtdPessoas}}</td>
-      <td>{{evento.lote}}</td>
+      <td>{{evento.lote  | uppercase}}</td>
       <td>
         <button class="btn btn-success"></button>
         <button class="btn btn-danger"></button>
